--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "dependencies": {
     "walk": "^2.3.9"
+  },
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/PaulAustin/pdoc.git"
   }
 }
